--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
-    "inquirer": "^7.0.4"
+    "inquirer": "^7.0.4",
+    "uuid": "^3.4.0",
+    "uuidv4": "^6.0.2"
   },
   "devDependencies": {
     "jest": "^25.1.0",
