--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Express-Note-Taker",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
     "express": "^4.17.1",
     "inquirer": "^7.0.4",
