--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.17.1",
-    "inquirer": "^7.0.4",
-    "uuid": "^3.4.0",
-    "uuidv4": "^6.0.2"
+    "inquirer": "^7.0.4"
   },
   "devDependencies": {
     "jest": "^25.1.0",
